<resources>
    <string name="app_name">Viewer 3D</string>
    <string name="but_exit">Exit</string>
    <string name="but_setup">Setup</string>
    <string name="but_back">Back</string>
    <string name="but_select_all">Select All</string>
    <string name="but_deselect_all">Deselect All</string>
    <string name="sample_btn">Sample</string>
    <string name="open_btn">Open</string>
    <string name="setup_btn">Setup</string>
    <string name="Cancel">Cancel</string>
    <string name="Continue">Continue</string>
    <string name="No">No</string>
    <string name="Photo">Photo</string>
    <string name="Rename">Rename</string>
    <string name="Upgrade">Upgrade</string>
    <string name="Yes">Yes</string>
    <string name="__arcore_cancel">Cancel</string>
    <string name="__arcore_continue">Continue</string>
    <string name="__arcore_install_app">This application requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_install_feature">This feature requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_installing">Installing Google Play Services for AR…</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_add_folder">Create Folder</string>
    <string name="action_back">back</string>
    <string name="action_delete">Delete</string>
    <string name="action_rename">Rename</string>
    <string name="action_search">search</string>
    <string name="add_3d_previews">Add some 3D views ?</string>
    <string name="add_view">Add view</string>
    <string name="address">Address</string>
    <string name="ads_loading">Ads loading #8230</string>
    <string name="advise_1">Aim the camera on a floor or ceiling</string>
    <string name="advise_2">Make sure the lighting is good</string>
    <string name="advise_3">Move the camera</string>
    <string name="advise_4">Select appropriate distance \n (0.5m - 2m)</string>
    <string name="advise_5">Try to change the viewing angle</string>
    <string name="advise_add_door">Try to markup door or window</string>
    <string name="advise_add_height">Try to add height</string>
    <string name="advise_extrude_height_from_ceiling">Move aim Down to extrude Height</string>
    <string name="advise_extrude_height_from_floor">Move aim Up to extrude Height</string>
    <string name="advise_generate_plan">Generate Plan !</string>
    <string name="advise_next_corner">Aim to next corner!</string>
    <string name="advise_nullhit_from_ceiling">Continue to measure on the Ceiling</string>
    <string name="advise_nullhit_from_floor">Continue to measure on the Floor</string>
    <string name="advise_start_markup_ceiling">Start markup Corners! \n CEILING</string>
    <string name="advise_start_markup_floor">Start markup Corners! \n FLOOR</string>
    <string name="all_functions">Measurements</string>
    <string name="all_projects_unlocked">All projects are unlocked!</string>
    <string name="already_selected">Already selected</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aprlan_rating_mail_subject">ARPlan review</string>
    <string name="ar_not_supported">This device does not support AR</string>
    <string name="ar_session_creation_error">Failed to create AR session</string>
    <string name="archive">Archive</string>
    <string name="arcore_resume_camera_error">ARCore resume error! Try to restart camera</string>
    <string name="arcore_resume_error">ARCore resume error!</string>
    <string name="area">Area</string>
    <string name="attach">Attach to#8230</string>
    <string name="auto_90">Auto 90</string>
    <string name="bad_name">inappropriate name</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="buy_one_plan_btn">Buy</string>
    <string name="cancel_operation">Do you really want to cancel operation?</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancelling">Cancelling#8230</string>
    <string name="cant_be_selected">Can\'t be selected!</string>
    <string name="cant_share_info_section">Info section can not be shared at the moment. We are working on adding this feature.</string>
    <string name="change">Change</string>
    <string name="character_counter_content_description">Characters entered %1$SevedSpace of %2$SevedSpace</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$SevedSpace of %2$SevedSpace</string>
    <string name="character_counter_pattern">%1$SevedSpace/%2$SevedSpace</string>
    <string name="check_internet_connection">Please check internet connection</string>
    <string name="check_room_markup">Check room geometry</string>
    <string name="chekinginapps">Checking In-App Purchases. Please wait#8230</string>
    <string name="chip_text">Chip text</string>
    <string name="city">City</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_to_accept_with">* By clicking this button you are agreeing to the</string>
    <string name="click_to_start">Click to start</string>
    <string name="close">Close</string>
    <string name="cm">cm</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_door_explanation">Adjacent door</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="display_preferences_background_key">display_preferences_background_key</string>
    <string name="display_preferences_background_values_black">black</string>
    <string name="display_preferences_twosided_key">display_preferences_twosided_key</string>
    <string name="display_preferences_lighting_key">display_preferences_lighting_key</string>
    <string name="display_preferences_rotation_key">display_preferences_rotation_key</string>
    <string name="display_preferences_rotation_values_xy">xy</string>
    <string name="display_preferences_background_title">Background</string>
    <string name="display_preferences_twosided_title">Two-sided</string>
    <string name="display_preferences_lighting_title">Lights</string>
    <string name="display_preferences_rotation_title">Rotation</string>
</resources>